# Schedule-Helper-AI-service

./: README.md  vercel.json
.github/workflows/: hf-sync.yml  vercel-backend-deploy.yml
ai/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  mcp_client.py  pyproject.toml  requirements.txt
ai/agent/: orchestrator.py
ai/agents/: agent1_interpreter.py
ai/app/: config.py  dependencies.py  main.py
ai/app/api/: schemas.py
ai/app/api/routes/: chat.py  resume.py  state.py
ai/app/graph/: builder.py  routing.py  state.py  types.py
ai/app/graph/agents/: counselor.py  helpers.py  prioritizer.py  protocol.py  router.py  scheduler.py
ai/app/services/: calendar.py  checkpointer.py  llm.py
ai/app/tools/: schedule_tools.py
ai/app/util/: parsing.py
ai/schemas/: agent_tools.py
ai/services/: weather_service.py
ai/tests/test_agents/: test_counselor.py  test_live_calendar.py  test_prioritizer.py  test_router.py  test_router_integration.py  test_scheduler.py
ai/tests/test_api/: test_chat_stream.py
ai/util/: calendar_service.py  parsing.py
backend/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vercel.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  (+1 more)
diagrams/: agent1-seq-diagram.puml  agent2-seq-diagram.puml  agent3-seq-diagram.puml  container-diagram.puml  content-diagram-agentorchestrator.puml  context-diagram.puml  counselor_sequence.puml
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+76 files in other folders)
