[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-oauthlib>=1.3.1",
    "ipython>=9.12.0",
    "langchain-google-community>=3.0.5",
    "langchain-ollama>=1.1.0",
    "langchain-qwq>=0.3.4",
    "langgraph-checkpoint-redis>=0.4.1",
    "load-dotenv>=0.1.0",
]
